compiler/tests/en/errors/match_variant_nonexhaustive.salam
// EXPECT: E079
func main:
    x := 1
    v := match x:
        1 =>: ret 42 end
        else =>: ret "s" end
    end
    match v:
        i32 n =>: println n end
    end
end
